--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 <html>
 <head>
-<script type="text/javascript"> //New Background on Load
-//Images not yet minified
-var numBackgrounds = 8;
-function ChangeIt() {
-  var num = Math.ceil( Math.random() * numBackgrounds );
-  document.body.background = 'images/bg/img'+num+'.jpg';
-  document.body.style.backgroundSize = "cover";// Background repeat
-}
-</script>
+//#include script
 </head>
 <body>
 
 
 </body>
 <script type="text/javascript">
-ChangeIt();
+loadBackground();
 </script>
 </html>
