--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <html>
 <head>
-//#include script
+  <link href="css/custom.css" rel="stylesheet">
+  <script src="js/jquery.min.js"></script>
 </head>
 <body>
+  <div class="se-pre-con">
+  <noscript>
+    <center>
+      <br><br>
+      <p style="font-size:20px;color:white;">Your browser does not support Javascript. :(<br>Please <a href="mailto:contact@usclatch.org?Subject=Error in Loading LATCH Website - Javascript Disabled" target="_top">email us</a> at contact@usclatch.org if you believe you received this in error.</p>
+    </center>
+  </noscript>
+  </div>
+  <div id="navbars" class="nav" onclick="openNav()">&#9776;</div>
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a onclick="closeNav()" href="#">About</a>
+    <a onclick="closeNav()" href="#">Initiatives</a>
+    <a onclick="closeNav()" href="#">Executive Board</a>
+    <a onclick="closeNav()" href="#">Partners</a>
+    <a onclick="closeNav()" href="#">Member Organizations</a>
+    <a onclick="closeNav()" href="#">Newsletter</a>
+    <a onclick="closeNav()" href="#">Contact</a>
+    <footer id="footer">
+      <div class="row">
+        <a onclick="closeNav()" href="#"><img class="socialicon" src="images/icons/facebook.png"></img></a>
+        <a onclick="closeNav()" href="#"><img class="socialicon" src="images/icons/instagram.png"></img></a>
+        <a onclick="closeNav()" href="#"><img class="socialicon" src="images/icons/twitter.png"></img></a>
+      </div>
+      <div class="copyright">
+        &copy; 2017 ESA
+      </div>
+    </footer>
+
+  </div>
+  <div class="ESA">
+    <div class="main">ESA</div>
+    <div class="sub">Protecting What Can't Protect Itself</div>
+  </div>
+
+  <div id="content">
+  </div>
 
 
 </body>
+<script src="js/custom.js"></script>
+
 <script type="text/javascript">
 loadBackground();
 </script>
