--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
 <html>
 <head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Website of the USC Environmental Student Assembly.">
+<meta property="og:site_name" content="uscesa.com">
+<meta property="og:url" content="http://uscesa.com">
+<meta property="og:locale" content="en_US">
+<meta name="og:description" content="Website of the USC Environmental Student Assembly.">
+<meta name="author" content="USC ESA">
+<link rel="shortcut icon" href="images/esa-logo.png" />
+
+<title>USC ESA</title>
+
+
+
+
+
   <link href="css/custom.css" rel="stylesheet">
   <script src="js/jquery.min.js"></script>
 </head>
@@ -15,18 +32,18 @@
   <div id="navbars" class="nav" onclick="openNav()">&#9776;</div>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a onclick="closeNav()" href="#">About</a>
-    <a onclick="closeNav()" href="#">Initiatives</a>
-    <a onclick="closeNav()" href="#">Executive Board</a>
-    <a onclick="closeNav()" href="#">Partners</a>
-    <a onclick="closeNav()" href="#">Member Organizations</a>
-    <a onclick="closeNav()" href="#">Newsletter</a>
-    <a onclick="closeNav()" href="#">Contact</a>
+    <a onclick="closeNav()" href="">About</a>
+    <a onclick="closeNav()" href="">Initiatives</a>
+    <a onclick="closeNav()" href="">Executive Board</a>
+    <a onclick="closeNav()" href="">Partners</a>
+    <a onclick="closeNav()" href="">Member Organizations</a>
+    <a onclick="closeNav()" href="">Newsletter</a>
+    <a onclick="closeNav()" href="">Contact</a>
     <footer id="footer">
       <div class="row">
-        <a onclick="closeNav()" href="#"><img class="socialicon" src="images/icons/facebook.png"></img></a>
-        <a onclick="closeNav()" href="#"><img class="socialicon" src="images/icons/instagram.png"></img></a>
-        <a onclick="closeNav()" href="#"><img class="socialicon" src="images/icons/twitter.png"></img></a>
+        <a onclick="closeNav()" target="_blank" href="https://www.facebook.com/uscesa/"><img class="socialicon" src="images/icons/facebook.png"></img></a>
+        <a onclick="closeNav()" target="_blank" href="https://www.instagram.com/uscesa/"><img class="socialicon" src="images/icons/instagram.png"></img></a>
+        <a onclick="closeNav()" target="_blank" href="https://twitter.com/uscesa/"><img class="socialicon" src="images/icons/twitter.png"></img></a>
       </div>
       <div class="copyright">
         &copy; 2017 ESA
