--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   <div id="navbars" class="nav" onclick="openNav()">&#9776;</div>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a onclick="closeNav()" href="">About</a>
-    <a onclick="closeNav()" href="">Initiatives</a>
-    <a onclick="closeNav()" href="">Executive Board</a>
-    <a onclick="closeNav()" href="">Partners</a>
-    <a onclick="closeNav()" href="">Member Organizations</a>
-    <a onclick="closeNav()" href="">Newsletter</a>
-    <a onclick="closeNav()" href="">Contact</a>
+    <a onclick="closeNav()" href="#">About</a>
+    <a onclick="closeNav()" href="#">Initiatives</a>
+    <a onclick="closeNav()" href="#">Executive Board</a>
+    <a onclick="closeNav()" href="#">Partners</a>
+    <a onclick="closeNav()" href="#">Member Organizations</a>
+    <a onclick="closeNav()" href="#">Newsletter</a>
+    <a onclick="closeNav()" href="#">Contact</a>
     <footer id="footer">
       <div class="row">
         <a onclick="closeNav()" target="_blank" href="https://www.facebook.com/uscesa/"><img class="socialicon" src="images/icons/facebook.png"></img></a>
