--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <title>USC ESA</title>
 
   <link href="css/custom.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Patrick+Hand|Permanent+Marker" rel="stylesheet">
   <script src="js/jquery.min.js"></script>
 </head>
 <body>
@@ -27,18 +28,18 @@
   <div id="navbars" class="nav" onclick="openNav()">&#9776;</div>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a onclick="closeNav()" href="#">About</a>
-    <a onclick="closeNav()" href="#">Initiatives</a>
-    <a onclick="closeNav()" href="#">Executive Board</a>
-    <a onclick="closeNav()" href="#">Partners</a>
-    <a onclick="closeNav()" href="#">Member Organizations</a>
-    <a onclick="closeNav()" href="#">Newsletter</a>
-    <a onclick="closeNav()" href="#">Contact</a>
+    <a onclick="closeNav();showAbout();" href="#">About</a>
+    <a onclick="closeNav();showInitiatives();" href="#">Initiatives</a>
+    <a onclick="closeNav();showEBoard();" href="#">Executive Board</a>
+    <a onclick="closeNav();showPartners();" href="#">Partners</a>
+    <a onclick="closeNav();showMembers();" href="#">Member Organizations</a>
+    <a onclick="closeNav();showNewsletter();" href="#">Newsletter</a>
+    <a onclick="closeNav();showContact();" href="#">Contact</a>
     <footer id="footer">
       <div class="row">
-        <a onclick="closeNav()" target="_blank" href="https://www.facebook.com/uscesa/"><img class="socialicon" src="images/icons/facebook.png"></img></a>
-        <a onclick="closeNav()" target="_blank" href="https://www.instagram.com/uscesa/"><img class="socialicon" src="images/icons/instagram.png"></img></a>
-        <a onclick="closeNav()" target="_blank" href="https://twitter.com/uscesa/"><img class="socialicon" src="images/icons/twitter.png"></img></a>
+        <a onclick="closeNav();" target="_blank" href="https://www.facebook.com/uscesa/"><img class="socialicon" src="images/icons/facebook.png"></img></a>
+        <a onclick="closeNav();" target="_blank" href="https://www.instagram.com/uscesa/"><img class="socialicon" src="images/icons/instagram.png"></img></a>
+        <a onclick="closeNav();" target="_blank" href="https://twitter.com/uscesa/"><img class="socialicon" src="images/icons/twitter.png"></img></a>
       </div>
       <div class="copyright">
         &copy; 2017 ESA
@@ -46,19 +47,43 @@
     </footer>
 
   </div>
-  <div class="ESA">
+  <div id="landing" class="ESA">
     <div class="main">ESA</div>
     <div class="sub">Protecting What Can't Protect Itself</div>
   </div>
 
-  <div id="content">
-  </div>
+  <div id="main-content">
+    <div id="about" class="subcontent">
+      <h1>About</h1>
+      <div class="innercontent">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer viverra porttitor quam, ut porttitor eros vestibulum eu. Morbi malesuada vestibulum ante, vitae porttitor nunc. In sed convallis dolor. Praesent pharetra vel magna at aliquam. Pellentesque vehicula urna et arcu tempus, vitae volutpat orci varius. Integer vitae urna nec dolor tincidunt eleifend. Integer purus odio, eleifend bibendum mollis auctor, sagittis at dui. Praesent volutpat eros libero, et scelerisque arcu vestibulum et. Cras bibendum eu justo sed imperdiet.</p>
+      <p>Pellentesque id risus est. Sed molestie est ac pretium pulvinar. Nunc mollis at magna at facilisis. Phasellus id maximus massa, ut bibendum metus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce tempus ultrices purus, nec vulputate lacus sagittis nec. Duis ac arcu eros. Nam accumsan, urna eu maximus egestas, velit dolor interdum nisl, at tempus lectus nulla ut elit. Ut porta consectetur justo vel vehicula. Etiam tellus libero, vulputate at iaculis non, pellentesque sed ipsum. Aliquam sagittis augue ut ipsum finibus, ut egestas ligula ullamcorper. Maecenas at egestas lacus, at bibendum dui. Pellentesque vitae imperdiet dui. Etiam commodo nisi sed massa porttitor accumsan vel sit amet urna.</p>
+    </div>
+    </div>
+      <div id="initiatives" class="subcontent">
+        Initiatives
+      </div>
+      <div id="eboard" class="subcontent">
+        Executive Board
+      </div>
+      <div id="partners" class="subcontent">
+        Partners
+      </div>
+      <div id="members" class="subcontent">
+        Members
+      </div>
+      <div id="newsletter" class="subcontent">
+        Newsletter
+      </div>
+      <div id="contact" class="subcontent">
+        Contact
+      </div>
+    </div>
 
+  </body>
+  <script src="js/custom.js"></script>
 
-</body>
-<script src="js/custom.js"></script>
-
-<script type="text/javascript">
-loadBackground();
-</script>
-</html>
+  <script type="text/javascript">
+  loadBackground();
+  </script>
+  </html>
