--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </center>
     </noscript>
   </div>
-  <div id="navbars" class="nav" onclick="openNav()">&#9776;</div>
+  <div id="navbars" class="nav" onclick="openNav()">&#9776; Act</div>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a onclick="showAbout();" href="#">About</a>
@@ -48,8 +48,8 @@
 
   </div>
   <div id="landing" class="ESA">
-    <div class="main">ESA</div>
-    <div class="sub">Protecting What Can't Protect Itself</div>
+    <div class="main"><img id="logo" src="images/esa-logo-large.png"></img></div>
+    <div class="sub"></div>
   </div>
 
   <div id="main-content">
