--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <!--Information to help with SEO and page contents -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,13 +11,14 @@
   <meta name="og:description" content="Website of the USC Environmental Student Assembly.">
   <meta name="author" content="USC ESA">
   <link rel="shortcut icon" href="images/esa-logo.png" />
+  <!-- Page title -->
   <title>USC ESA</title>
-
   <link href="css/custom.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Source+Sans+Pro:600" rel="stylesheet">
   <script src="js/jquery.min.js"></script>
 </head>
 <body>
+  <!-- LOADING SCREEN FOR BETTER UI -->
   <div class="se-pre-con">
     <noscript>
       <center>
@@ -25,6 +27,8 @@
       </center>
     </noscript>
   </div>
+  <!-- END LOADING SCREEN FOR BETTER UI -->
+  <!-- MAIN MENU AND LANDING PAGE -->
   <div id="navbars" class="nav" onclick="openNav()">&#9776; Act</div>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -50,6 +54,8 @@
     <div class="main"><img id="logo" src="images/esa-logo-large.png"></img></div>
     <div class="sub"></div>
   </div>
+  <!-- END MAIN MENU AND LANDING PAGE -->
+  <!-- THIS IS WHERE TO ADD THE CONTENT FROM OLD SITE -->
   <div id="main-content">
     <div id="about" class="subcontent">
       <h1>About</h1>
@@ -101,10 +107,8 @@
       </div>
     </div>
   </div>
+  <!-- END OF THE CONTENT FROM OLD SITE -->
 </body>
+<!-- Include at end of file to prevent HTTP blocking -->
 <script src="js/custom.js"></script>
-
-<script type="text/javascript">
-loadBackground();
-</script>
 </html>
