fix overflow error

--- a/index.html
+++ b/index.html
@@ -282,11 +282,11 @@
       <h1>Partners</h1>
       <div class="innercontent">
         <p>
-          <a href="">Green Student Fund</a><br/>
-          <a href="">Ink for Education</a><br/>
-          <a href="">Office of Sustainability</a><br/>
-          <a href="">Program Board</a><br/>
-          <a href="">USG</a>
+          <a target="_blank" href="#">Green Student Fund</a><br/>
+          <a target="_blank" href="#">Ink for Education</a><br/>
+          <a target="_blank" href="#">Office of Sustainability</a><br/>
+          <a target="_blank" href="#">Program Board</a><br/>
+          <a target="_blank" href="#">USG</a>
         </p>
       </div>
     </div>
@@ -295,25 +295,25 @@
       <div class="innercontent">
       <p>We are thrilled to have these wonderful member organizations as part of our assembly! Click on each one to learn more.</p>
       <p>
-        <a href="https://www.facebook.com/animalrightsusc">Animal Rights Association</a><br/>
-        <a href="https://www.facebook.com/BikeUSC">Bike Coalition</a><br/>
-        <a href="https://www.facebook.com/usccooking/">Cooking Collaboration</a><br/>
-        <a href="https://www.facebook.com/ecoop1460">Eco-op</a><br/>
-        <a href="http://environmentalcore.org/">Environmental Core</a><br/>
-        <a href="https://uscesa.com/greeks-go-green/">Greeks Go Green</a><br/><!--Link Must Change Based on New Page-->
-        <a href="https://www.facebook.com/myclosetcloud/">MyClosetCloud</a><br/>
-        <a href="http://peaksandprofessors.org/">Peaks and Professors</a><br/>
-        <a href="https://uscesa.com/sc-outfitters/">SC Outfitters</a><br/><!--Link Must Change-->
-        <a href="https://www.facebook.com/foodrecoveryusc/">Trojan Recovery Food Network</a><br/>
-        <a href="https://uscesa.com/usc-environmental-studies-scientific-dive-team/">Environmental Studties Scientific Dive Team</a><!--Link Must Change-->
+        <a target="_blank" href="https://www.facebook.com/animalrightsusc">Animal Rights Association</a><br/>
+        <a target="_blank" href="https://www.facebook.com/BikeUSC">Bike Coalition</a><br/>
+        <a target="_blank" href="https://www.facebook.com/usccooking/">Cooking Collaboration</a><br/>
+        <a target="_blank" href="https://www.facebook.com/ecoop1460">Eco-op</a><br/>
+        <a target="_blank" href="http://environmentalcore.org/">Environmental Core</a><br/>
+        <a target="_blank" href="https://uscesa.com/greeks-go-green/">Greeks Go Green</a><br/><!--Link Must Change Based on New Page-->
+        <a target="_blank" href="https://www.facebook.com/myclosetcloud/">MyClosetCloud</a><br/>
+        <a target="_blank" href="http://peaksandprofessors.org/">Peaks and Professors</a><br/>
+        <a target="_blank" href="https://uscesa.com/sc-outfitters/">SC Outfitters</a><br/><!--Link Must Change-->
+        <a target="_blank" href="https://www.facebook.com/foodrecoveryusc/">Trojan Recovery Food Network</a><br/>
+        <a target="_blank" href="https://uscesa.com/usc-environmental-studies-scientific-dive-team/">Environmental Studties Scientific Dive Team</a><!--Link Must Change-->
       </p>
       </div>
     </div>
     <div id="newsletter" class="subcontent">
       <h1>Newsletter</h1>
       <div class="innercontent">
-        <p>Click <a href="http://eepurl.com/chpuk9">here</a> to subscribe to our newsletter.</p>
-        <p>Click <a href="http://us3.campaign-archive2.com/home/?u=e0dfeb35a78e83da1ad1ef337&id=3ff2bccc95">here</a> to view our newsletter archive.</p>
+        <p>Click <a target="_blank" href="http://eepurl.com/chpuk9">here</a> to subscribe to our newsletter.</p>
+        <p>Click <a target="_blank" href="http://us3.campaign-archive2.com/home/?u=e0dfeb35a78e83da1ad1ef337&id=3ff2bccc95">here</a> to view our newsletter archive.</p>
       </div>
     </div>
     <div id="contact" class="subcontent">
