fix overflow error

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <noscript>
       <center>
         <br><br>
-        <p style="font-size:20px;color:white;">Your browser does not support Javascript. :(<br>Please <a href="mailto:contact@usclatch.org?Subject=Error in Loading LATCH Website - Javascript Disabled" target="_top">email us</a> at contact@usclatch.org if you believe you received this in error.</p>
+        <p style="font-size:20px;color:white;">Your browser does not support Javascript. :(<br>Please <a href="mailto:contact@usclatch.org?Subject=Error in Loading ESA Website - Javascript Disabled" target="_top">email LATCH</a>, our website manager, at contact@usclatch.org if you believe you received this in error.</p>
       </center>
     </noscript>
   </div>
