--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
   <!-- END LOADING SCREEN FOR BETTER UI -->
   <!-- MAIN MENU AND LANDING PAGE -->
-  <div id="navbars" class="nav" onclick="openNav()">&#9776; Act</div>
+  <div id="navbars" class="nav" onclick="openNav()">&#9776; Menu</div>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">x</a>
     <a class="blocked" onclick="showHome();" href="#">Home</a>
