--- a/index.html
+++ b/index.html
@@ -123,7 +123,364 @@
     </div>
     <div id="eboard" class="subcontent">
       <h1>Executive Board</h1>
-      <div class="innercontent">
+<div>
+  <a>
+    <figure>
+      <img src="images/eboard/aaryas.jpg" alt="">
+      <h2>
+        Aarya Suryavanshi
+      </h2>
+      <em>
+        Director of Internal Membership
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Sophomore
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> Mechanical Engineering
+      </figcaption>
+      <figcaption>
+        <strong>Fun Fact:</strong> My favorite color is green because I had a really intense Ireland phase in 7th grade.
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/aillishu.jpg" alt="">
+      <h2>
+        Ailish Ullmann
+      </h2>
+      <em>
+        Co-Director of Advocacy
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Junior
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> Environmental Science and Health
+      </figcaption>
+      <figcaption>
+        <strong>Minors:</strong> Photography and Social Change; Helath
+      </figcaption>
+      <figcaption>
+        <strong>Environmental cause most passionate about:</strong> Stopping the Anthropocene — the planet’s entirely human-caused, 6th mass extinction.
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/alanah.jpg" alt="">
+      <h2>
+        Alana Herrera
+      </h2>
+      <em>
+        Director of Community Outreach
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Sophomore
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> UNKNOWN
+      </figcaption>
+      <figcaption>
+        <strong>Fun fact:</strong> UNKNOWN
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/brookeh.jpg" alt="">
+      <h2>
+        Brooke Helstrom
+      </h2>
+      <em>
+        Co-Director of Advocacy
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Sophomore
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> Environmental Studies; Philosophy, Politics, and Law
+      </figcaption>
+      <figcaption>
+        <strong>Fun fact:</strong> I lost my guinea pig in my backyard once.
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/ceceu.jpg" alt="">
+      <h2>
+        CeCe Uhrich
+      </h2>
+      <em>
+        Co-Director of Community Outreach
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Sophomore
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> Environmental Science and Health
+      </figcaption>
+      <figcaption>
+        <strong>Favorite outdoor activity:</strong> Urban gardening then making dinner with my produce!
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/elliotp.jpg" alt="">
+      <h2>
+        Elliot Patrick
+      </h2>
+      <em>
+        Director of Marketing (Social Media)
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Junior
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> Environmental Studies
+      </figcaption>
+      <figcaption>
+        <strong>Fun fact:</strong> I'm lefty.
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/emilyp.jpg" alt="">
+      <h2>
+        Emily Palmer
+      </h2>
+      <em>
+        Co-Director of University Outreach
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Junior
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> Chemical Engineering (Sustainable Energy)
+      </figcaption>
+      <figcaption>
+        <strong>Favorite outdoor activity:</strong> Kayaking
+      </figcaption>
+      <figcaption>
+        <strong>Spirit vegetable:</strong> Snap Pea
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/isabeli.jpg" alt="">
+      <h2>
+        Isabel Irawan
+      </h2>
+      <em>
+        Director of Technology
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Junior
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> Neuroscience
+      </figcaption>
+      <figcaption>
+        <strong>Fun fact:</strong> I’ve swam with whale sharks! They’re the largest fish in the ocean.
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/jacquelined.jpg" alt="">
+      <h2>
+        Jacqueline Dobbas
+      </h2>
+      <em>
+        Director of Greek Relations
+      </em>
+      <figcaption>
+        <strong>Year:</strong> UNKNOWN
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> UNKNOWN
+      </figcaption>
+      <figcaption>
+        <strong>Fun fact:</strong> UNKNOWN
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/joshuab.jpg" alt="">
+      <h2>
+        Joshua Blockstein
+      </h2>
+      <em>
+        Co-Director
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Senior
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> Biological Sciences
+      </figcaption>
+      <figcaption>
+        <strong>Fun fact:</strong> I love snorkeling. My favorite places I have been so far are the U.S. Virgin Islands and the Florida Keys.
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/margauxw.jpg" alt="">
+      <h2>
+        Margaux Wilson
+      </h2>
+      <em>
+        Co-Director of Community Gardens
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Sophomore
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> Environmental Engineering
+      </figcaption>
+      <figcaption>
+        <strong>Spirit vegetable:</strong> Sugar snap peas! We’ll be like 2 peas in a pod if you join ESA :)
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/ogechii.jpg" alt="">
+      <h2>
+        Ogechi Ibeanusi
+      </h2>
+      <em>
+        Co-Director of Community Gardens
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Senior
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> History and English
+      </figcaption>
+      <figcaption>
+        <strong>Fun fact:</strong> I cherish spending time with my friends and family.
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/oliviap.jpg" alt="">
+      <h2>
+        Olivia Pearson
+      </h2>
+      <em>
+        Co-Director of Marketing (Public Relations)
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Sophomore
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> Environmental Engineering
+      </figcaption>
+      <figcaption>
+        <strong>Minor:</strong> Theatre
+      </figcaption>
+      <figcaption>
+        <strong>Fun fact:</strong> I can recite the alphabet backwards in under 3 seconds while doing a headstand.
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/paigep.jpg" alt="">
+      <h2>
+        Paige Preston
+      </h2>
+      <em>
+        Assistant Director
+      </em>
+      <figcaption>
+        <strong>Year:</strong> UNKNOWN
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> Public Economy
+      </figcaption>
+      <figcaption>
+        <strong>Minors:</strong> Social Entrepreneurship; Business Finance
+      </figcaption>
+      <figcaption>
+        <strong>Spirit vegetable:</strong> An orgainc purple carrot
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/rebeccaw.jpg" alt="">
+      <h2>
+        Rebecca Weber
+      </h2>
+      <em>
+        Co-Director
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Senior
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> Environmental Studies, naturally
+      </figcaption>
+      <figcaption>
+        <strong>Spirit vegetable:</strong> Beet
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/soolgih.jpg" alt="">
+      <h2>
+        Soolgi Hong
+      </h2>
+      <em>
+        Director of External Membership
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Junior
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> Business Administration
+      </figcaption>
+      <figcaption>
+        <strong>Minor:</strong> International Relations
+      </figcaption>
+      <figcaption>
+        <strong>Favorite outdoor activity:</strong> Pretty into hiking, backpacking, and escaping the Concrete Jungle.
+      </figcaption>
+    </figure>
+  </a>
+  <a>
+    <figure>
+      <img src="images/eboard/tamarf.jpg" alt="">
+      <h2>
+        Tamar Fleshler
+      </h2>
+      <em>
+        Director of Sustainability Leadership
+      </em>
+      <figcaption>
+        <strong>Year:</strong> Junior
+      </figcaption>
+      <figcaption>
+        <strong>Major:</strong> Environmental Studies
+      </figcaption>
+      <figcaption>
+        <strong>Fun fact:</strong> My name means “date”(like the fruit) in hebrew!
+      </figcaption>
+    </figure>
+  </a>
+</div>
+      <!-- <div class="innercontent">
         <h2>2016-2017 E-Board</h2>
         <p>
         Executive Directors (Joshua &amp; Rebecca)<br/>
@@ -277,7 +634,7 @@
         Major: Environmental StudiesDirector of Sustainability Leadership<br/>
         Fun Fact: My name means “date”(like the fruit) in hebrew!
         </p>
-      </div>
+      </div> -->
     </div>
     <div id="partners" class="subcontent">
       <h1>Partners</h1>
