more styling stuff and newsletter added along with infastructure for link previews

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     $(function() {
         // to be discussed later
                 //$('#members a').miniPreview({ prefetch: 'pageload' });
-                //$('#partners a').miniPreview({ prefetch: 'parenthover' });
+                $('#newsletter a').miniPreview({ prefetch: 'none' });
                 // prefetch: 'none' or 'parenthover'
             });
   </script> <script src="https://rawgit.com/shaneapen/Image-Preview-for-Links/master/image_preview_for_links.js"></script>
